--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "/Users/garvc07/Desktop/mac_core.jar"
-    ]
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar",
+            "/Users/garvc07/Desktop/mac_core.jar"
+        ],
+        "exclude": [
+            "lib/repl_core.jar"
+        ]
+    }
 }
