--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "/Users/garvc07/Desktop/mac_core.jar"
+            "/Users/garvc07/Desktop/mac_core.jar",
+            "/Users/garvc07/Downloads/mac_core.jar"
         ],
         "exclude": [
             "lib/repl_core.jar"
